0.6.0 - currently working on
- [#2100] Feature: Add class tx_oelib_Exception_AccessDenied

0.5.0 - released 2008-12-21
- [#2435] Change: Allow having non-identical template objects for the same template file
- [#2321] Feature: The FE user data mapper should be able to get and use the currently logged-in FE user
- [#2322] Feature: Create an autoloader for models and other classes
- [#2417] Feature: CreateFrontEndUser should automatically create a group if needed
- [#2412] Fix: Full stop is missing in error message for missing locales
- [#2327] Fix: FE Editor will not allow me to edit oder enter events
- [#2341] Change: Use the new template and templateRegistry in tx_oelib_templatehelper
- [#2324] Feature: Add a class templateRegistry
- [#2323] Feature: Add a class template

0.4.3 - released 2008-11-04
- [#2041] Feature: Provide an abstraction for FE users
- [#2313] Feature: Add a class "mapperRegistry"
- [#2120] Change: Use tabs for indentation only at the beginning of lines
- [#1403] Feature: createRelation() needs to update the relation counter field in the local record
- [#2277] Fix: Unit test failure when pedantic is installed: testHeaderProxyInNonTestModeReallySendsCatchableHeader
- [#2275] Feature: Added method hasTableColumn() in the testing framework

0.4.2 - released 2008-10-07
- [#2252] Change: Remove the code duplication with retrievePageConfig
- [#2248] Fix: Fix the order of __destruct and unset calls
- [#2249] Change: Clean up the timer class
- [#2243] Change: Move createRecursivePageList from templatehelper to db
- [#2240] Change: Speed up templatehelper::createRecursivePageList
- [#2238] Fix: Make our unit tests work with the page tree cache
- [#2123] Fix: Huge memory consumption through createFakeFrontend()
- [#1901] Feature: Use more SQL indices
- [#2188] Feature: Create a mapper for models
- [#2187] Feature: Create a model class
- [#2097] Feature: Create a class tx_oelib_db