@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2085] Fix: configcheck::checkIfPositiveIntegerValue: unused parameter $sheet
 - [#2100] Feature: Add class tx_oelib_Exception_AccessDenied
 
 0.5.0 - released 2008-12-21
